force-app/main/default/objects/Third_Party_Content__c/Third_Party_Content__c.object-meta.xml
<CustomObject>
    <label>Third Party Content</label>
    <nameField>
        <label>Third Party Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>