force-app/main/default/objects/Third_Party_Content__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement</label>
    <type>Checkbox</type>
</CustomField>