force-app/main/default/objects/Third_Party_Content__c/fields/Attachment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Comment__c</fullName>
    <label>Attachment Comment</label>
    <type>TextArea</type>
</CustomField>