force-app/main/default/objects/Third_Party_Content__c/fields/Copyright_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Disclosure__c</fullName>
    <label>Copyright Disclosure</label>
    <referenceTo>Copyright_Disclosure__c</referenceTo>
    <relationshipLabel>Third Party Contents</relationshipLabel>
    <relationshipName>Third_Party_Contents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>