force-app/main/default/objects/Third_Party_Content__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>